# JRD-100_Pi0

./: .gitignore  README.md  TODO.txt
JRD-100_UHF_RFID_Pi/JRD-100/: CMD.h  CMakeLists.txt  JRD100.cpp  JRD100.h
JRD-100_UHF_RFID_Pi/JRD-100/src/: CMD.h  JRD100.cpp  JRD100.h  main.cpp
JRD-100_UHF_RFID_Pi/examples/: Test.cpp  get_version.cpp  read_tag.cpp
